# chisel

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  README.md
.circleci/: config.yml
Docker/: Dockerfile
cmake/: FindClang.cmake  FindLLVM.cmake
cmake/Modules/: Findlibclang.cmake
docker/: Dockerfile
docs/: Doxyfile.in
examples/basic/: test.sh
examples/loop/: loop.c.orig.c
include/: AST_manipulation.h  DeadcodeElimination.h  FileManager.h  Frontend.h  GlobalReduction.h  IntegrationManager.h  LocalReduction.h  OptionManager.h  ProbabilisticModel.h  Profiler.h  Reduction.h  Reformat.h  Report.h  SourceManager.h  Stats.h  StatsManager.h  StringUtils.h  Transformation.h  TransformationManager.h  VectorUtils.h  Visualization.h  counting.h  cursor_utils.h  dce.h  delta_debugging.h  hierarchical_delta_debugging.h  model.h  options.h  profiling.h  report.h  rules.h  stats.h  visitor.h
lib/wrappers/: cc
src/: Chisel.cpp  chisel.cc
src/clang-helper/: AST_manipulation.cc  cursor_utils.cc  visitor.cc
src/core/: DeadcodeElimination.cpp  Frontend.cpp  GlobalReduction.cpp  LocalReduction.cpp  ProbabilisticModel.cpp  Reduction.cpp  Reformat.cpp  SourceManager.cpp  Transformation.cpp  dce.cc  delta_debugging.cc  hierarchical_delta_debugging.cc  rules.cc
src/learning/: model.cc
src/utils/: FileManager.cpp  IntegrationManager.cpp  OptionManager.cpp  Profiler.cpp  Report.cpp  Stats.cpp  StatsManager.cpp  StringUtils.cpp  counting.cc  options.cc  profiling.cc  report.cc  stats.cc
src/xref/: Visualization.cpp
test/: CMakeLists.txt  test.sh
test/basic/: basic.c.answer.c  test.sh
test/basic0/: basic0.c  basic0.c.answer.c  test.sh
test/basic1/: basic1.c  basic1.c.answer.c  test.sh
test/basic2/: basic2.c  basic2.c.answer.c  test.sh
test/basic3/: basic3.c  basic3.c.answer.c  test.sh
test/basic4/: basic4.c  basic4.c.answer.c  test.sh
test/basic5/: basic5.c.answer.c  test.sh
test/conditional/: conditional.c.orig.c  input  test.sh
test/conditional0/: conditional0.c.answer.c  conditional0.c.orig.c  test.sh
test/conditional1/: conditional1.c  conditional1.c.answer.c  test.sh
test/conditional2/: conditional2.c.answer.c  conditional2.c.orig.c  test.sh
test/conditional3/: conditional3.c.answer.c  conditional3.c.orig.c  test.sh
test/dce0/: dce0.c.answer.c  test.sh
test/dce1/: dce1.c  dce1.c.answer.c  test.sh
test/dce2/: dce2.c.orig.c  test.sh
test/dce3/: dce3.c  dce3.c.answer.c  test.sh
test/dce4/: dce4.c  dce4.c.answer.c  test.sh
test/do-while0/: do-while0.c.answer.c  do-while0.c.orig.c  test.sh
test/do-while1/: do-while1.c.orig.c  test.sh
test/do-while2/: do-while2.c.answer.c  do-while2.c.orig.c  test.sh
test/for0/: for0.c.answer.c  for0.c.orig.c  test.sh
test/for1/: for1.c  for1.c.answer.c  test.sh
test/for2/: for2.c  test.sh
test/for3/: for3.c  test.sh
test/function0/: function0.c  function0.c.answer.c  test.sh
test/function1/: function1.c.answer.c  function1.c.orig.c  test.sh
test/integration0/: integration0.c  integration0.c.answer.c  test.sh
test/integration1/: Makefile  integration1.c.answer.c  subfile0.c  subfile1.c  test.sh
test/integration1/include/: header.h
test/label0/: label0.c  label0.c.answer.c  test.sh
test/loop/: input  test.sh
test/loop0/: loop0.c  loop0.c.answer.c  test.sh
test/loop1/: loop1.c.answer.c  loop1.c.orig.c  test.sh
test/macro0/: macro0.c  macro0.c.answer.c  test.sh
test/macro1/: macro1.c  macro1.c.answer.c  test.sh
test/switch0/: switch0.c.answer.c  switch0.c.orig.c  test.sh
test/switch1/: switch1.c  switch1.c.answer.c  test.sh
test/switch2/: switch2.c  switch2.c.answer.c  test.sh
test/switch3/: switch3.c  switch3.c.answer.c  test.sh
